--- a/css/estilosHome.css
+++ b/css/estilosHome.css
@@ -518,12 +518,12 @@
     color: black;
 }
 
-.cardProducto .wishlist:hover {
+.cardProducto .btnWishlist:hover {
     background-color: black;
     color: rgb(8, 231, 38);
 }
 
-.cardProducto .wishlist {
+.cardProducto .btnWishlist {
     background: none;
     border: 1px solid #ddd;
     cursor: pointer;
@@ -535,13 +535,13 @@
     border-radius: 8px;
 }
 
-.cardProducto .wishlist svg {
+.cardProducto .btnWishlist svg {
     width: 50px; 
     height: 50px;
 }
 
-.cardProducto .wishlist svg:hover,
-.cardProducto .wishlist svg path:hover {
+.cardProducto .btnWishlist svg:hover,
+.cardProducto .btnWishlist svg path:hover {
     fill: currentColor;
     stroke: rgb(8, 231, 38);
     stroke-width: 3;
