--- a/css/header.css
+++ b/css/header.css
@@ -107,6 +107,10 @@
     width: 60px;
 }
 
+.iconMenu{
+    position: relative;
+}
+
 .iconMenu .carritoSVG{
     color: black;
 }
@@ -115,6 +119,23 @@
 .carritoSVG:hover{
     color: rgb(8, 231, 38);
 }
+
+/* Contador de carrito */
+.contadorCarrito {
+    position: absolute;
+    left: 30px;
+    background-color: red;
+    color: white;
+    font-size: 0.8rem;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 20px;
+    font-weight: bold;
+    display: none; /* Por defecto no se muestra */
+}
+
 
 /**Tablet**/
 @media (min-width: 0px) and (max-width: 1100px) {
