--- a/css/header.css
+++ b/css/header.css
@@ -136,6 +136,22 @@
     display: none; /* Por defecto no se muestra */
 }
 
+/* Contador de wishlist*/
+.contadorWishlist {
+    position: absolute;
+    left: 30px;
+    background-color: red;
+    color: white;
+    font-size: 0.8rem;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 20px;
+    font-weight: bold;
+    display: none; /* Por defecto no se muestra */
+}
+
 
 /**Tablet**/
 @media (min-width: 0px) and (max-width: 1100px) {
