--- a/css/estilosCarrito.css
+++ b/css/estilosCarrito.css
@@ -67,14 +67,37 @@
 }
 
 .itemsCarrito .eliminar,
-.itemWishlist .eliminar {
-    background-color: transparent;
-    color: rgb(2, 148, 22);
-    border: none;
+.itemWishlist .eliminar,
+.itemWishlist .agregarAlCarrito {
     padding: 10px 20px;
-    font-size: 1.25em;
+    background-color: black;
+    color: white;
+    display: inline-block;
+    text-decoration: none;
+    border-radius: 15px;
+    text-align: center;
+    border: solid 1px black;
+    margin: 10px 20px 5px 20px;
+    text-transform: uppercase;
+}
+
+.itemWishlist .eliminar{
+    background-color: transparent;
+    color: black;
+}
+
+.itemsCarrito .eliminar:hover,
+.itemWishlist .agregarAlCarrito:hover {
+    background-color: rgb(8, 231, 38);
+    color: rgb(17, 17, 17);
+    transition: all 0.3s ease-in-out;
     cursor: pointer;
-    border-radius: 4px;
+    border: solid 1px black;
+}
+
+.itemWishlist .eliminar:hover{
+    background-color: red;
+    cursor: pointer;
 }
 
 .itemsCarrito .descripcionEliminar .eliminar:hover,
